# ssh-key-manager

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml  snap.yml
snap/: snapcraft.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/crypto/: backup.rs  encrypt.rs  mod.rs
src/ssh/: generate.rs  keys.rs  mod.rs  scan.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/components/: input.rs  mod.rs  wizard.rs
tests/: integration_tests.rs
